# unilaiva-songbook

./: .gitignore  .gitmodules  README.md  booklet.odt  collated_wisdom-songbook_A5DS_on_A4_folded.context  collated_wisdom-songbook_a6-onesided-on-a4.tex  compile-songbooks.sh  compile_mielikinetiikka.sh  compile_unilaiva-songbook.sh  compile_wisdom.sh  disabled_ul-selection_new-songs.tex  howto_print_a5_double_paged_on_a4_single_paged_printer  laulau_A5.tex  mantracollection.odt  mielikinetiikka-songbook.tex  pdf_a6_on_a4.tex  printing_notes  printout_mielikinetiikka_A5_on_A4_doublesided_folded.context  printout_mielikinetiikka_A5_on_A4_sidebyside_simple.context  printout_unilaiva-songbook_A5_on_A4_doublesided_folded.context  printout_unilaiva-songbook_A5_on_A4_sidebyside_simple.context  printout_wisdom_A5_on_A4_doublesided_folded.context  printout_wisdom_A5_on_A4_sidebyside_simple.context  tags.can  ting.odt  ul-selection_cacao-20200909.tex  ul-selection_example.tex  ul-selection_new-songs.tex  ul-selection_new-songs_A5.tex  ul-selection_yhteislaulu_2022-01.tex  ul-selection_yhteislaulu_2022-03.tex  ulsbs-compile  ulsbs-config.toml  unilaiva-astral-alfredo-novas_A5.tex  unilaiva-astral-alfredo_A5.tex  unilaiva-astral-completa_A5.tex  unilaiva-astral-cura.tex  unilaiva-astral-cura_A5.tex  unilaiva-astral-maria-alice_A5.tex  unilaiva-astral-mestre_A5.tex  (+22 more)
ulsbs/: MANIFEST.in  README.md  pyproject.toml  ulsbs-book2json  ulsbs-compile  ulsbs-config-example.toml  ulsbs-ly2tex  ulsbs-midi2audio  ulsbs-songdb-json
ulsbs/misc/ext_package_songs_distribution/: README.md
ulsbs/src/ulsbs/: __init__.py  __main__.py  cli.py  config.py  constants.py  container.py  deploy.py  docker.py  engine_assets.py  jobs.py  lock.py  paths.py  pipeline.py  resultlist.py  songdb.py  tempdir.py  ui.py  util.py
ulsbs/src/ulsbs/tools/: __init__.py  book2json.py  ly2tex.py  midi2audio.py  songdb_json.py
ulsbs/vscode-extension/ulsbs-tex-tools/: README.md  esbuild.web.mjs  extension.js  language-configuration.json  package-lock.json  package.json
ulsbs/vscode-extension/ulsbs-tex-tools/assets/: songbook-template_A5.tex
(+202 files in other folders)
