[project]
name = "ulsbs"
version = "0.1.0"
description = "Unilaiva Songbook System (ULSBS) compiler and utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
  { name="Lari Natri", email="lari.natri@iki.fi" }
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
]

[project.scripts]
ulsbs-compile = "ulsbs.cli:main"

[project.urls]
Homepage = "https://github.com/unilaiva/unilaiva-songbook"
Source = "https://github.com/unilaiva/unilaiva-songbook"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ulsbs = ["assets/**"]
